Update scaling fixes, resize contact form for mobile view, align everything ect

--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -43,6 +43,7 @@ body {
  
 .acc-active-symbol {
     padding-right: .2rem;
+    margin-left: 22px;
     font-size: 30px;
 }
 
